updated neovim configuration

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,94 +1,175 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": [
-        "dart",
-        "python",
-        "json",
-        "python3"
-    ],
-    "explorer.width": 30,
-    "explorer.buffer.root.template": "[icon & 1] OPEN EDITORS",
-    "explorer.file.root.template": "[icon & 1] PROJECT ([root])",
-    "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
-    "explorer.file.showHiddenFiles": true,
-    "explorer.file.reveal.auto": false,
-    "explorer.previewAction.onHover": false,
-    "python.formatting.provider": "autopep8",
-    "python.formatting.autopep8Path": "~/.local/bin/autopep8",
-    "explorer.icon.enableNerdfont": true,
-    "explorer.buffer.tabOnly": true,
-    "explorer.keyMappings.global": {
-        "i": false,
-
-        "C": "copyFile",
-        "V": "pasteFile",
-        "X": "cutFile",
-        "md": "delete",
-        "D": "delete",
-        "n": "addDirectory",
-        "N": "addFile",
-        "F": "search",
-        "Fr": "searchRecursive",
-        "R": "rename",
-
-        "*": "toggleSelection",
-        "<tab>": "actionMenu",
-        "gk": ["wait", "expandablePrev"],
-        "gj": ["wait", "expandableNext"],
-        "h": ["wait", "collapse"],
-        "l": ["wait", "expandable?", "expand", "open"],
-        "J": ["wait", "toggleSelection", "normal:j"],
-        "K": ["wait", "toggleSelection", "normal:k"],
-        "gl": ["wait", "expand:recursive"],
-        "gh": ["wait", "collapse:recursive"],
-        "<2-LeftMouse>": [
-            "expandable?",
-            ["expanded?", "collapse", "expand"],
-            "open"
-        ],
-        "<cr>": [
-            "wait",
-            "expandable?",
-            ["expanded?", "collapse", "expand"],
-            "open"
-        ],
-        "e": "open",
-        "s": "open:split",
-        "E": "open:vsplit",
-        "t": "open:tab",
-        ">": ["expandable?", "cd", "open"],
-        "<": ["gotoParent"],
-        "gs": ["wait", "reveal:select"],
-        "il": "preview:labeling",
-        "ic": "preview:content",
-        "Il": "previewOnHover:toggle:labeling",
-        "Ic": "previewOnHover:toggle:content",
-        "II": "previewOnHover:disable",
-        "yp": "copyFilepath",
-        "yn": "copyFilename",
-        "dd": "cutFile",
-        "dF": "deleteForever",
-        "zh": "toggleHidden",
-        "g<dot>": "toggleHidden",
-        "r": "refresh",
-        "?": "help",
-        "q": "quit",
-        "<esc>": "esc",
-        "gd": "listDrive",
-        "gf": "gotoSource:file",
-        "gb": "gotoSource:buffer",
-        "[[": ["wait", "sourcePrev"],
-        "]]": ["wait", "sourceNext"],
-        "[i": ["wait", "indentPrev"],
-        "]i": ["wait", "indentNext"],
-        "[m": ["wait", "markPrev:modified"],
-        "]m": ["wait", "markNext:modified"],
-        "[d": ["wait", "markPrev:diagnosticError:diagnosticWarning"],
-        "]d": ["wait", "markNext:diagnosticError:diagnosticWarning"],
-        "[D": ["wait", "markPrev:diagnosticError"],
-        "]D": ["wait", "markNext:diagnosticError"],
-        "[c": ["wait", "markPrev:git"],
-        "]c": ["wait", "markNext:git"],
-        "<<": "gitStage",
-        ">>": "gitUnstage"
-    }
+	"coc.preferences.formatOnSaveFiletypes": [
+		"dart",
+		"python",
+		"json",
+		"python3"
+	],
+	"coc.preferences.jumpCommand": "tabe",
+	"explorer.width": 30,
+	"explorer.buffer.root.template": "[icon & 1] OPENED EDITORS",
+	"explorer.file.root.template": "[icon & 1] PROJECT ([root])",
+	"explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
+	"explorer.file.showHiddenFiles": true,
+	"explorer.openAction.strategy": "tab",
+	"explorer.file.reveal.auto": false,
+	"explorer.previewAction.onHover": false,
+	"python.formatting.provider": "autopep8",
+	"python.formatting.autopep8Path": "~/.local/bin/autopep8",
+	"explorer.icon.enableNerdfont": true,
+	"explorer.buffer.tabOnly": true,
+	"explorer.keyMappings.global": {
+		"i": false,
+		"C": "copyFile",
+		"V": "pasteFile",
+		"X": "cutFile",
+		"md": "delete",
+		"D": "delete",
+		"n": "addDirectory",
+		"N": "addFile",
+		"F": "search",
+		"Fr": "searchRecursive",
+		"R": "rename",
+		"*": "toggleSelection",
+		"<tab>": "actionMenu",
+		"gk": [
+			"wait",
+			"expandablePrev"
+		],
+		"gj": [
+			"wait",
+			"expandableNext"
+		],
+		"h": [
+			"wait",
+			"collapse"
+		],
+		"l": [
+			"wait",
+			"expandable?",
+			"expand",
+			"open"
+		],
+		"J": [
+			"wait",
+			"toggleSelection",
+			"normal:j"
+		],
+		"K": [
+			"wait",
+			"toggleSelection",
+			"normal:k"
+		],
+		"gl": [
+			"wait",
+			"expand:recursive"
+		],
+		"gh": [
+			"wait",
+			"collapse:recursive"
+		],
+		"<2-LeftMouse>": [
+			"expandable?",
+			[
+				"expanded?",
+				"collapse",
+				"expand"
+			],
+			"open"
+		],
+		"<cr>": [
+			"wait",
+			"expandable?",
+			[
+				"expanded?",
+				"collapse",
+				"expand"
+			],
+			"open"
+		],
+		"e": "open",
+		"s": "open:split",
+		"E": "open:vsplit",
+		"t": "open:tab",
+		">": [
+			"expandable?",
+			"cd",
+			"open"
+		],
+		"<": [
+			"gotoParent"
+		],
+		"gs": [
+			"wait",
+			"reveal:select"
+		],
+		"il": "preview:labeling",
+		"ic": "preview:content",
+		"Il": "previewOnHover:toggle:labeling",
+		"Ic": "previewOnHover:toggle:content",
+		"II": "previewOnHover:disable",
+		"yp": "copyFilepath",
+		"yn": "copyFilename",
+		"dd": "cutFile",
+		"dF": "deleteForever",
+		"zh": "toggleHidden",
+		"g<dot>": "toggleHidden",
+		"r": "refresh",
+		"?": "help",
+		"q": "quit",
+		"<esc>": "esc",
+		"gd": "listDrive",
+		"gf": "gotoSource:file",
+		"gb": "gotoSource:buffer",
+		"[[": [
+			"wait",
+			"sourcePrev"
+		],
+		"]]": [
+			"wait",
+			"sourceNext"
+		],
+		"[i": [
+			"wait",
+			"indentPrev"
+		],
+		"]i": [
+			"wait",
+			"indentNext"
+		],
+		"[m": [
+			"wait",
+			"markPrev:modified"
+		],
+		"]m": [
+			"wait",
+			"markNext:modified"
+		],
+		"[d": [
+			"wait",
+			"markPrev:diagnosticError:diagnosticWarning"
+		],
+		"]d": [
+			"wait",
+			"markNext:diagnosticError:diagnosticWarning"
+		],
+		"[D": [
+			"wait",
+			"markPrev:diagnosticError"
+		],
+		"]D": [
+			"wait",
+			"markNext:diagnosticError"
+		],
+		"[c": [
+			"wait",
+			"markPrev:git"
+		],
+		"]c": [
+			"wait",
+			"markNext:git"
+		],
+		"<<": "gitStage",
+		">>": "gitUnstage"
+	}
 }
