--- a/Home/.tmux.conf
+++ b/Home/.tmux.conf
@@ -33,11 +33,11 @@ set -g @dracula-border-contrast false
 set -g @dracula-left-icon-padding 0
 set -g @dracula-military-time true
 set -g @dracula-show-left-icon 💻
-set -g @dracula-show-left-sep 
-set -g @dracula-show-right-sep 
+set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep 
 set -g @dracula-show-fahrenheit false
 set -g @dracula-day-month true
 
 # Enable mouse
 # (disabled cuz of termux issues)
-# set -g mouse on
+set -g mouse on
