--- a/Home/.tmux.conf
+++ b/Home/.tmux.conf
@@ -1,9 +1,5 @@
-# Add TrueColor support
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-
-# Activate Tmux Plugin Manager
-run -b '~/.tmux/plugins/tpm/tpm'
+set-option -g default-terminal "screen-256color"
+set-option -g terminal-overrides "screen-256color"
 
 # Set fish as default shell
 set -g default-shell /usr/bin/fish
@@ -19,25 +15,20 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Set Dracula theme (https://draculatheme.com/tmux)
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-powerline true
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-# (amdgpu is not supported yet)
-#set -g @dracula-gpu-usage true
-set -g @dracula-ram-usage true
-set -g @dracula-show-timezone false
-set -g @dracula-cpu-usage false
-set -g @dracula-border-contrast false
-set -g @dracula-left-icon-padding 0
-set -g @dracula-military-time true
-set -g @dracula-show-left-icon 💻
-set -g @dracula-show-left-sep 
-set -g @dracula-show-right-sep 
-set -g @dracula-show-fahrenheit false
-set -g @dracula-day-month true
-
 # Enable mouse
-# (disabled cuz of termux issues)
 set -g mouse on
+set -g set-clipboard on
+
+# Reduce time to wait for Escape key. You'll want this for neovim.
+set-option escape-time 40
+
+# Allow for navigating between words with option
+set-window-option -g xterm-keys on
+
+# Command delay? We don't want that, make it short
+set -g escape-time 10
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Start flavours
+# End flavours
