--- a/.config/flavours/config.toml
+++ b/.config/flavours/config.toml
@@ -12,14 +12,37 @@ file = "~/.tmux.conf"
 template = "tmux"
 
 [[item]]
+file = "~/.config/fish/theme.sh"
+template = "shell"
+rewrite = true
+hook = "bash ~/.config/fish/theme.sh"
+
+[[item]]
 file = "~/.config/i3/config"
 template = "i3"
+subtemplate = "colors"
 hook = "i3-msg reload"
+start = "# Start flavours colors"
+end = "# End flavours colors"
+
+[[item]]
+file = "~/.config/i3/config"
+template = "i3"
+subtemplate = "client-properties"
+hook = "i3-msg reload"
+start = "# Start flavours properties"
+end = "# End flavours properties"
 
 [[item]]
 file = "~/.config/rofi/themes/colors.rasi"
 template = "rofi"
 rewrite = true
+
+[[item]]
+file = "~/.config/polybar/config"
+template = "polybar"
+start = "; Start flavours"
+end = "; End flavours"
 
 [[item]]
 file = "~/.config/dunst/dunstrc"
