--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,5 +30,10 @@ set -g escape-time 10
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Start flavours
-# End flavours
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins 'time'
+set -g @dracula-show-left-icon 'session'
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+
+run -b '~/.tmux/plugins/tpm/tpm'
