--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,6 @@
-# among us
-
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 # Set fish as default shell
 set -g default-shell /usr/bin/fish
+set -g default-command /usr/bin/fish
 
 # Bind prefix to Ctrl+A
 unbind C-b
@@ -19,20 +15,15 @@ unbind %
 
 # Enable mouse
 set -g mouse on
-set -g set-clipboard on
-
-# Reduce time to wait for Escape key. You'll want this for neovim.
-set-option escape-time 40
+#set -g set-clipboard on
 
 # Allow for navigating between words with option
 set-window-option -g xterm-keys on
 
-# Command delay? We don't want that, make it short
-set -g escape-time 10
-
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 set -g @dracula-plugins 'time'
 set -g @dracula-show-left-icon 'session'
 set -g @dracula-day-month true
