--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 # Set fish as default shell
 set -g default-shell /usr/bin/fish
 set -g default-command /usr/bin/fish
@@ -15,12 +18,15 @@ unbind %
 
 # Enable mouse
 set -g mouse on
+#set -g set-clipboard on
+
+# Command delay? We don't want that, make it short
+set -g escape-time 0
 
 # Allow for navigating between words with option
 set-window-option -g xterm-keys on
 
 set -g @plugin 'dracula/tmux'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @dracula-plugins 'time'
