gruvbox for da win

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ unbind %
 
 # Enable mouse
 set -g mouse on
-#set -g set-clipboard on
+#set -g set-clipboard off
 
 # Command delay? We don't want that, make it short
 set -g escape-time 0
@@ -26,12 +26,6 @@ set -g escape-time 0
 # Allow for navigating between words with option
 set-window-option -g xterm-keys on
 
-set -g @plugin 'dracula/tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g @dracula-plugins 'time'
-set -g @dracula-show-left-icon 'session'
-set -g @dracula-day-month true
-set -g @dracula-military-time true
+set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
 run -b '~/.tmux/plugins/tpm/tpm'
