--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,9 +26,7 @@ set -g escape-time 0
 # Allow for navigating between words with option
 set-window-option -g xterm-keys on
 
-set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
-
-## Use vim keybindings in copy mode
+# Use vim keybindings in copy mode
 set-option -g mouse on
 setw -g mode-keys vi
 set-option -s set-clipboard off
@@ -39,4 +37,64 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+
+##### THEME #####
+# https://github.com/LawAbidingCactus/tmux-gruvbox-truecolor
+
+# window separators
+set-option -wg window-status-separator ""
+
+# monitor window changes
+set-option -wg monitor-activity on
+set-option -wg monitor-bell on
+
+# set statusbar update interval
+set-option -g status-interval 1
+
+# change window screen colors
+set-option -wg mode-style bg="#FE8019",fg="#3C3836"
+
+# default statusbar colors (terminal bg should be #282828)
+set-option -g status-style bg=terminal,fg="#A89984"
+
+# default window title colors
+set-option -wg window-status-style bg="#FE8019",fg="#7C6F64"
+
+# colors for windows with activity
+set-option -wg window-status-activity-style bg="#FE8019",fg="#A89984"
+
+# colors for windows with bells
+set-option -wg window-status-bell-style bg="#FE8019",fg="#FE8019"
+
+# active window title colors
+set-option -wg window-status-current-style bg="#3C3836",fg="#7C6F64"
+
+# pane border
+set-option -g pane-active-border-style fg="#FE8019"
+set-option -g pane-border-style fg="#3C3836"
+
+# message info
+set-option -g message-style bg="#FE8019",fg="#3C3836"
+
+# writing commands inactive
+set-option -g message-command-style bg="#A89984",fg="#3C3836"
+
+# pane number display
+set-option -g display-panes-active-colour "#FE8019"
+set-option -g display-panes-colour "#3C3836"
+
+# clock
+set-option -wg clock-mode-colour "#FE8019"
+
+# copy mode highlighting
+%if #{>=:#{version},3.2}
+    set-option -wg copy-mode-match-style "bg=#A89984,fg=#3C3836"
+    set-option -wg copy-mode-current-match-style "bg=#FE8019,fg=#3C3836"
+%endif
+# statusbar formatting
+# "#fe8019" MUST be in lowercase here (conflicts with statusline alias otherwise)
+set-option -g status-left "#[bg=#A89984, fg=#3C3836]#{?client_prefix,#[bg=#fe8019],#[bg=#A89984]} #{session_name} "
+set-option -g status-right "#[bg=#3C3836, fg=#7C6F64] %Y-%m-%d %H:%M:%S #[bg=#A89984, fg=#3C3836]"
+
+set-option -wg window-status-current-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
+set-option -wg window-status-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
